progreso del init

--- a/amazon.html
+++ b/amazon.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Amazon Style Demo</title>
+<link rel="stylesheet" href="amazon-style.css">
 </head>
 <body>
-    <h1>amazon</h1>
+<header>
+<div class="logo">Mi Amazon</div>
+<input type="text" placeholder="Buscar productos..." />
+<nav class="nav-links">
+<a href="#">Cuenta</a>
+<a href="#">Pedidos</a>
+<a href="#">Carrito</a>
+</nav>
+</header>
+
+
+<div class="hero">
+Ofertas especiales de hoy ⚡
+</div>
+
+
+<div class="container">
+<h2 style="margin-bottom: 15px;">Productos Destacados</h2>
+<div class="grid">
+<div class="card">
+<img src="611tQS6rsSL._AC_UL320_.jpg" alt="Producto">
+<p>Auriculares Bluetooth</p>
+<strong>$29.99</strong>
+<button>Agregar al carrito</button>
+</div>
+<div class="card">
+<img src="71MBZg4hDfL._AC_UY218_.jpg" alt="Producto">
+<p>Smartwatch Deportivo</p>
+<strong>$49.99</strong>
+<button>Agregar al carrito</button>
+</div>
+<div class="card">
+<img src="71AAvAjzHvL._AC_UY218_.jpg" alt="Producto">
+<p>Tablet Android</p>
+<strong>$89.99</strong>
+<button>Agregar al carrito</button>
+</div>
+<div class="card">
+<img src="61QY3V6A-NL._AC_SX466_.jpg" alt="Producto">
+<p>Mouse Gamer RGB</p>
+<strong>$19.99</strong>
+<button>Agregar al carrito</button>
+</div>
+</div>
+</div>
+
+
+<div class="carousel">
+<div class="carousel-track">
+<img src="71NDud3LrlL._AC_UY218_.jpg" alt="Promo 1">
+<img src="71wVOooh9pL._AC_UY218_.jpg" alt="Promo 2">
+<img src="71up+hmd7zL._AC_UY218_.jpg" alt="Promo 3">
+</div>
+</div>
+
+
+<footer>
+© 2025 Mi Amazon — Todos los derechos reservados.
+</footer>
+
+
 </body>
 </html>
